--- a/front-pi/src/styles.css
+++ b/front-pi/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Poppins:wght@400;500&display=swap');
+
+body {
+  font-family: "Inter", sans-serif;
+  background-color: #F7FBFC;
+}
+
+html {
+  min-height: 100%;
+}
