--- a/front-pi/src/app/views/cliente/cliente.component.html
+++ b/front-pi/src/app/views/cliente/cliente.component.html
@@ -1,9 +1,40 @@
 <div>
   <h2>Gerenciamento de Clientes</h2>
+  <ul>
+    <li (click)="novoCliente()">
+      Novo Cliente
+    </li>
+  </ul>
 
   <ul class="menu">
     <li *ngFor="let cliente of clientes">
-      {{cliente.nome}} - {{cliente.email}} - {{cliente.cpf}} - {{cliente.senha}}
+      {{ cliente.nome }} - {{ cliente.email }} - {{ cliente.cpf }} -
+      {{ cliente.senha }}
     </li>
   </ul>
 </div>
+
+<div *ngIf="clienteEdicao">
+    <h2>Insira os dados do Cliente</h2>
+    <ul>
+      <li>
+        <label for="name">Nome </label>
+        <input type="text" name="nome" [(ngModel)]="clienteEdicao.nome" />
+      </li>
+      <li>
+        <label for="name">Email </label>
+        <input type="text" name="email" [(ngModel)]="clienteEdicao.email" />
+      </li>
+      <li>
+        <label for="name">CPF </label>
+        <input type="text" name="cpf" [(ngModel)]="clienteEdicao.cpf"/>
+      </li>
+      <li>
+        <label for="name">Senha </label>
+        <input type="text" name="senha" [(ngModel)]="clienteEdicao.senha"/>
+      </li>
+    </ul>
+    <button (click)="salvar()">Salvar</button>
+    <button (click)="cancelar()">Cancelar</button>
+</div>
+
