--- a/front-pi/src/app/views/cliente/cliente.component.html
+++ b/front-pi/src/app/views/cliente/cliente.component.html
@@ -7,7 +7,7 @@
   </ul>
 
   <ul class="menu">
-    <li *ngFor="let cliente of clientes">
+    <li *ngFor="let cliente of clientes" (click)="selecionarCliente(cliente)">
       {{ cliente.nome }} - {{ cliente.email }} - {{ cliente.cpf }} -
       {{ cliente.senha }}
     </li>
@@ -23,7 +23,7 @@
       </li>
       <li>
         <label for="name">Email </label>
-        <input type="text" name="email" [(ngModel)]="clienteEdicao.email" />
+        <input type="email" name="email" [(ngModel)]="clienteEdicao.email" />
       </li>
       <li>
         <label for="name">CPF </label>
