--- a/front-pi/src/app/views/cliente/cliente.component.html
+++ b/front-pi/src/app/views/cliente/cliente.component.html
@@ -5,12 +5,11 @@
       Novo Cliente
     </li>
   </ul>
-
   <ul class="menu">
     <li *ngFor="let cliente of clientes" >
       <span class="botaoEditar" (click)="selecionarCliente(cliente)">
-        {{ cliente.nome }} - {{ cliente.email }} - {{ cliente.cpf }} -
-        {{ cliente.senha }}
+      Nome: {{ cliente.nome }} - Email: {{ cliente.email }} - CPF: {{ cliente.cpf }}
+       - Senha:{{ cliente.senha }}
       </span>
       <span class="botaoExcluir" (click)="excluir(cliente)">
         X
