feat: add roupa path

--- a/front-pi/src/app/app.component.html
+++ b/front-pi/src/app/app.component.html
@@ -4,6 +4,9 @@
     <li>
       <a routerLink="/cliente">Cliente</a>
     </li>
+    <li>
+      <a routerLink="/roupa">Roupas</a>
+    </li>
   </ul>
   <router-outlet></router-outlet>
 </div>
