feat: add pagamanto component with all functionalities

--- a/front-pi/src/app/app.component.html
+++ b/front-pi/src/app/app.component.html
@@ -5,7 +5,10 @@
       <a routerLink="/cliente">Cliente</a>
     </li>
     <li>
-      <a routerLink="/roupa">Roupas</a>
+      <a routerLink="/roupa">Roupa</a>
+    </li>
+    <li>
+      <a routerLink="/pagamento">Pagamento</a>
     </li>
   </ul>
   <router-outlet></router-outlet>
