feat: add router link to venda

--- a/front-pi/src/app/app.component.html
+++ b/front-pi/src/app/app.component.html
@@ -10,6 +10,9 @@
     <li>
       <a routerLink="/pagamento">Pagamento</a>
     </li>
+    <li>
+      <a routerLink="/venda">Venda</a>
+    </li>
   </ul>
   <router-outlet></router-outlet>
 </div>
