feat: add function to venda route

--- a/front-pi/src/app/app.component.html
+++ b/front-pi/src/app/app.component.html
@@ -11,7 +11,10 @@
       <a routerLink="/pagamento">Pagamento</a>
     </li>
     <li>
-      <a routerLink="/venda">Venda</a>
+      <a routerLink="/venda">Relatório</a>
+    </li>
+    <li>
+      <a routerLink="/fazervenda">Função de Venda</a>
     </li>
   </ul>
   <router-outlet></router-outlet>
