feat: add style app component

--- a/front-pi/src/app/app.component.html
+++ b/front-pi/src/app/app.component.html
@@ -1,21 +1,23 @@
 <div>
-  <h1>Aplicação Angular</h1>
-  <ul>
-    <li>
-      <a routerLink="/cliente">Cliente</a>
-    </li>
-    <li>
-      <a routerLink="/roupa">Roupa</a>
-    </li>
-    <li>
-      <a routerLink="/pagamento">Pagamento</a>
-    </li>
-    <li>
-      <a routerLink="/venda">Relatório</a>
-    </li>
-    <li>
-      <a routerLink="/fazervenda">Função de Venda</a>
-    </li>
-  </ul>
+  <h1>Paris Clothes</h1>
+  <div>
+    <ul class="list">
+      <li class="flex-item">
+        <a routerLink="/cliente">Cliente</a>
+      </li>
+      <li class="flex-item">
+        <a routerLink="/roupa">Roupa</a>
+      </li>
+      <li class="flex-item">
+        <a routerLink="/pagamento">Pagamento</a>
+      </li>
+      <li class="flex-item">
+        <a routerLink="/venda">Relatório</a>
+      </li>
+      <li class="flex-item">
+        <a routerLink="/fazervenda">Função de Venda</a>
+      </li>
+    </ul>
+  </div>
   <router-outlet></router-outlet>
 </div>
