--- a/front-pi/src/app/views/fazer-venda/fazer-venda.component.html
+++ b/front-pi/src/app/views/fazer-venda/fazer-venda.component.html
@@ -13,10 +13,6 @@
         [(ngModel)]="venda.numeroVenda"
       />
     </li>
-    <li>
-      <label for="name">Data da Venda: </label>
-      <input type="date" name="dataVenda" [(ngModel)]="venda.dataVenda"/>
-    </li>
 
     <label for="select">Insira o Nome do Cliente: </label>
     <select [(ngModel)]="venda.cliente.id">
@@ -48,13 +44,16 @@
     <label for="">Insira a Quantidade Vendida: </label>
     <input type="number" [(ngModel)]="quantidadeVendida" />
     <br>
+    <label for="">Insira o Preço Vendido: </label>
+    <input type="number" [(ngModel)]="roupa.preco" />
+    <br>
     <button (click)="adicionarRoupa()">Adicionar Roupa</button>
     <br />
 
     <ul class="menu">
       <li *ngFor="let itemVenda of venda.itensVendidos">
         <span>
-          quantidadeVendida {{ itemVenda.quantidadeVendida }} - Produto: {{itemVenda.roupa.id}}
+          quantidadeVendida {{ itemVenda.quantidadeVendida }} - Produto Comprado: {{roupa.id}}
         </span>
       </li>
     </ul>
