--- a/front-pi/src/app/app.component.html
+++ b/front-pi/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div>
+<section>
   <h1>Paris Clothes</h1>
   <div>
     <ul class="list">
@@ -20,4 +20,4 @@
     </ul>
   </div>
   <router-outlet></router-outlet>
-</div>
+</section>
