--- a/front-pi/src/styles.css
+++ b/front-pi/src/styles.css
@@ -8,7 +8,7 @@
 
 body {
   font-family: "Inter", sans-serif;
-  background-color: #F7FBFC;
+  background-color: #F9F7F7;
 }
 
 html {
@@ -22,8 +22,8 @@ li {
 h1 {
   display: flex;
   justify-content: center;
-  margin-top: 50px;
-  font-size: 35px;
+  margin-top: 80px;
+  font-size: 50px;
   color: #3F72AF;
 }
 
@@ -35,17 +35,28 @@ h1 {
 a {
   color: #3F72AF;
   text-decoration: none;
+  transition: color 400ms;
 }
 
 .flex-item {
   background-color: #B9D7EA;
   width: 200px;
-  height: 100px;
-  margin-top: 35px;
-  line-height: 100px;
+  height: 150px;
+  margin-top: 100px;
+  line-height: 150px;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 20px;
   text-align: center;
 
   border-radius: 8px;
+  cursor: pointer;
+
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  transition: background-color 400ms;
+}
+
+
+.flex-item:hover {
+  background-color: white;
+  transition: 0.2s ease-out;
 }
