--- a/front-pi/src/app/views/pagamento/pagamento.component.html
+++ b/front-pi/src/app/views/pagamento/pagamento.component.html
@@ -1,10 +1,6 @@
-<div>
-  <h2>Gerenciamento de Pagamentos</h2>
-  <ul>
-    <li (click)="novoPagamento()">
-      Novo Pagamento
-    </li>
-  </ul>
+<mat-card>
+  <mat-card-title>Gerenciamento de Pagamentos</mat-card-title>
+  <button mat-button (click)="novoPagamento()">Novo Pagamento</button>
   <ul class="menu">
     <li *ngFor="let pagamento of pagamentos" >
       <span class="botaoEditar" (click)="selecionarPagamento(pagamento)">
@@ -15,17 +11,17 @@
       </span>
     </li>
   </ul>
-</div>
 
 <div *ngIf="pagamentoEdicao">
     <h2>Insira os dados do pagamento</h2>
-    <ul>
-      <li>
-        <label for="name">Tipo de Pagamento </label>
-        <input type="text" name="nome" [(ngModel)]="pagamentoEdicao.tipoPagamento" />
-      </li>
-    </ul>
-    <button (click)="salvar()">Salvar</button>
-    <button (click)="cancelar()">Cancelar</button>
+    <div class="menu">
+      <mat-form-field appearance="fill">
+        <mat-label>Tipo de Pagamento</mat-label>
+        <input matInput type="text" [(ngModel)]="pagamentoEdicao.tipoPagamento" autocomplete="off">
+      </mat-form-field>
+    </div>
+    <button mat-button (click)="salvar()">Salvar</button>
+    <button mat-button (click)="cancelar()">Cancelar</button>
 </div>
+</mat-card>
 
