--- a/front-pi/src/styles.css
+++ b/front-pi/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Poppins:wght@400;500&display=swap');
+@import '~bootstrap/dist/css/bootstrap.min.css';
 
 * {
   margin: 0;
@@ -8,7 +9,7 @@
 
 body {
   font-family: "Inter", sans-serif;
-  background-color: #F7FBFC;
+  background-color: #f7fbfc;
 }
 
 html {
@@ -49,3 +50,6 @@ a {
 
   border-radius: 8px;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
