feat: add styles

--- a/front-pi/src/app/views/pagamento/pagamento.component.html
+++ b/front-pi/src/app/views/pagamento/pagamento.component.html
@@ -6,9 +6,9 @@
       <span class="botaoEditar" (click)="selecionarPagamento(pagamento)">
       Tipo de Pagamento: {{ pagamento.tipoPagamento }}
       </span>
-      <span class="botaoExcluir" (click)="excluir(pagamento)">
+      <button mat-button class="botaoExcluir" (click)="excluir(pagamento)">
         X
-      </span>
+      </button>
     </li>
   </ul>
 
