--- a/front-pi/src/app/app.component.css
+++ b/front-pi/src/app/app.component.css
@@ -19,3 +19,12 @@
   height: 70px;
   width: 90px;
 }
+
+.center {
+  justify-content: center;
+}
+.container {
+  max-width: 620px;
+  margin: 0 auto;
+  display: flex;
+}
