--- a/front-pi/src/app/app.component.html
+++ b/front-pi/src/app/app.component.html
@@ -5,26 +5,28 @@
     </button> -->
     <span class="label-color">Paris Clothes</span>
     <div>
-      <img class="logo" src="/assets/imagens/torre.png" alt="paris">
+      <img class="logo" src="/assets/imagens/torre.png" alt="paris" />
     </div>
     <span class="example-spacer"></span>
   </mat-toolbar>
-  <div class="menu">
-    <button mat-raised-button class="menu-button">
+  <div class="container center">
+    <div class="menu">
+      <button mat-raised-button class="menu-button">
         <a routerLink="/cliente">Cliente</a>
-    </button>
-    <button mat-raised-button class="menu-button">
-      <a routerLink="/roupa">Roupa</a>
-    </button>
-    <button mat-raised-button class="menu-button">
-      <a routerLink="/pagamento">Pagamento</a>
-    </button>
-    <button mat-raised-button class="menu-button">
-      <a routerLink="/fazervenda">Função de Venda</a>
-    </button>
-    <button mat-raised-button class="menu-button">
-      <a routerLink="/venda">Relatório</a>
-    </button>
+      </button>
+      <button mat-raised-button class="menu-button">
+        <a routerLink="/roupa">Roupa</a>
+      </button>
+      <button mat-raised-button class="menu-button">
+        <a routerLink="/pagamento">Pagamento</a>
+      </button>
+      <button mat-raised-button class="menu-button">
+        <a routerLink="/fazervenda">Função de Venda</a>
+      </button>
+      <button mat-raised-button class="menu-button">
+        <a routerLink="/venda">Relatório</a>
+      </button>
+    </div>
   </div>
   <router-outlet></router-outlet>
 </div>
