--- a/front-pi/src/app/views/cliente/cliente.component.html
+++ b/front-pi/src/app/views/cliente/cliente.component.html
@@ -6,10 +6,10 @@
       <span class="botaoEditar" (click)="selecionarCliente(cliente)">
       Nome: {{ cliente.nome }} - Email: {{ cliente.email }} - CPF: {{ cliente.cpf }}
        - Senha:{{ cliente.senha }}
-      </span> X
-      <span class="botaoExcluir" (click)="excluir(cliente)">
-        X
       </span>
+      <button mat-button class="botaoExcluir" (click)="excluir(cliente)">
+        X
+      </button>
     </li>
   </ul>
 
