--- a/front-pi/src/app/views/relatorioVenda/venda.component.html
+++ b/front-pi/src/app/views/relatorioVenda/venda.component.html
@@ -2,22 +2,19 @@
   <mat-card-title>Gerenciamento de Vendas</mat-card-title>
   <mat-card-subtitle>Relatório</mat-card-subtitle>
   <div class="menu">
-    <mat-form-field appearance="fill">
-      <mat-label>Data Inicial</mat-label>
-      <input matInput [matDatepicker]="picker" [(ngModel)]="dataInicial">
-      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-      <mat-datepicker #picker></mat-datepicker>
-    </mat-form-field>
+    <li>
+      <label for="name">Data Inicial</label>
+      <input type="date" name="dataInicial" [(ngModel)]="dataInicial" />
+  </li>
   </div>
   <div class="menu">
-    <mat-form-field appearance="fill">
-      <mat-label>Data Final</mat-label>
-      <input matInput [matDatepicker]="pickerEnd" [(ngModel)]="dataFinal">
-      <mat-datepicker-toggle matSuffix [for]="pickerEnd"></mat-datepicker-toggle>
-      <mat-datepicker #pickerEnd></mat-datepicker>
-    </mat-form-field>
+    <li>
+      <label for="name">Data Final</label>
+      <input type="date" name="dataFinal" [(ngModel)]="dataFinal" />
+    </li>
   </div>
   <button mat-button (click)="listarVenda()">Gerar Relatório</button>
+
 
   <ul class="menu">
     <li *ngFor="let venda of vendas" >
