--- a/front-pi/src/app/views/cliente/cliente.component.html
+++ b/front-pi/src/app/views/cliente/cliente.component.html
@@ -49,7 +49,7 @@
         <li *ngFor="let cliente of clientes">
           <div class="result">
             <span class="botaoEditar" (click)="selecionarCliente(cliente)">
-              <h3>Nome</h3>
+              <label for="nome">Nome</label>
               <span id="client-result" class="botaoEditar" (click)="selecionarCliente(cliente)" >
                 {{cliente.nome}}
               </span>
